<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LauncherFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:id="@+id/focusable_view">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:src="@drawable/instagram_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/input_email"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/input_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:padding="12dp"
            android:background="@drawable/white_rounded_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/no_account_yet_create_one"
            android:gravity="center"
            android:textSize="16sp"
            android:id="@+id/register"
            android:textColor="@color/link_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Forgot Password?"
            android:gravity="center"
            android:textSize="16sp"
            android:id="@+id/forgot_password"
            android:textColor="@color/link_blue"/>

    </LinearLayout>


</RelativeLayout>