<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.account.UpdateAccountFragment"
    android:fillViewport="true"
    android:background="#fff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="80dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/img_default_user"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/changeProfilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_photo"
                android:layout_centerHorizontal="true"
                android:text="@string/change_photo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- display_name section -->
            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="30dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_displayname" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/display_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="flagNoExtractUi"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <!-- website section -->
            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_website" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/website">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="flagNoExtractUi"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <!-- description section -->
            <RelativeLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="flagNoExtractUi"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <TextView
                android:id="@+id/textPrivateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relLayout4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/grey_border_bottom"
                android:text="@string/private_information"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <!-- email section -->
            <RelativeLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textPrivateInfo"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:imeOptions="flagNoExtractUi"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <!-- username section -->
            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout5"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_username" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="flagNoExtractUi"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>