<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- ********************Middle Section*************************** -->

        <RelativeLayout
            android:id="@+id/relLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/constraint_layout1"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/linLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_weight="25">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerVertical="true"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="0.5dp"
                        android:src="@drawable/img_default_user"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="75">

                    <include layout="@layout/snippet_top_profile"/>

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linLayout"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/website"
                    android:textColor="@color/link_blue"
                    android:textSize="16sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linLayout2"
                android:layout_marginBottom="50dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/user_stories_recyclerview"
                    />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</merge>