<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textSize="12sp"
            android:layout_marginTop="-8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPosts"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@+id/tvPosts"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="12sp"
            android:layout_marginTop="-8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
            app:layout_constraintLeft_toRightOf="@+id/textPosts"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toLeftOf="@+id/textFollowing"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.526"/>

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
            android:layout_marginEnd="-22dp"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/textEditProfile"
            android:layout_width="156dp"
            android:layout_height="18dp"
            android:text="@string/edit_your_profile"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"
            android:background="@drawable/grey_border"/>

        <TextView
            android:id="@+id/follow"
            android:layout_width="156dp"
            android:layout_height="18dp"
            android:text="Follow"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"
            android:background="@drawable/follow_button"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/unfollow"
            android:layout_width="156dp"
            android:layout_height="18dp"
            android:text="Unfollow"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"
            android:background="@drawable/unfollow_button"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>